@@ -15,6 +15,6 @@
 
 JSON_Value *edgex_redstr_config_json (const iot_data_t *allconf);
 
-edgex_data_client_t *edgex_data_client_new_redstr (const iot_data_t *allconf, iot_logger_t *lc, const devsdk_timeout *tm, iot_threadpool_t *queue);
+edgex_data_client_t *edgex_data_client_new_redstr (devsdk_service_t *svc, const devsdk_timeout *tm, iot_threadpool_t *queue);
 
 #endif
