@@ -21,8 +21,8 @@
 #define EX_MQ_HOST "MessageQueue/Host"
 #define EX_MQ_PORT "MessageQueue/Port"
 #define EX_MQ_TOPIC "MessageQueue/PublishTopicPrefix"
-#define EX_MQ_USERNAME "MessageQueue/Optional/Username"
-#define EX_MQ_PASSWORD "MessageQueue/Optional/Password"
+#define EX_MQ_AUTHMODE "MessageQueue/AuthMode"
+#define EX_MQ_SECRETNAME "MessageQueue/SecretName"
 #define EX_MQ_CLIENTID "MessageQueue/Optional/ClientId"
 #define EX_MQ_QOS "MessageQueue/Optional/Qos"
 #define EX_MQ_KEEPALIVE "MessageQueue/Optional/KeepAlive"
